--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -38,8 +38,6 @@ header {
       ul {
         color: var(--white-color);
         display: flex;
-        z-index: 5;
-
         @include breakPoints(mobile) {
           flex-direction: column;
           align-items: center;
@@ -59,12 +57,15 @@ header {
             }
           }
         }
+        @include breakPoints(mobile) {
+          top: 5.5em;
+        }
         @include breakPoints(small) {
           flex-direction: column;
           align-items: center;
           display: none;
           position: absolute;
-          top: 8%;
+          top: 5.5em;
           left: 0;
           width: 100%;
           background-color: var(--dark-blue-color);
@@ -82,6 +83,7 @@ header {
           text-transform: uppercase;
           padding: 0 1em;
           cursor: pointer;
+          user-select: none;
           &:hover {
             background-color: var(--white-color);
             color: var(--dark-blue-color);
@@ -106,7 +108,7 @@ header {
   width: 100%;
   position: fixed;
   top: 5.5em;
-  z-index: 10;
+  z-index: 5;
   left: 0;
   background-color: var(--yellow-color);
   color: var(--dark-blue-color);
@@ -127,6 +129,7 @@ header {
         display: flex;
         align-items: center;
         margin: 0 0.5em;
+        color: black;
         img {
           width: 2em;
           margin-right: 0.5em;
