--- a/style/scss/_section-2.scss
+++ b/style/scss/_section-2.scss
@@ -1,44 +1,73 @@
 .section-2 {
   width: 100%;
-  background-color: var(--white-color);
-  padding: 2em 0;
-  .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3em 0;
+  section {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    h1 {
-      color: var(--yellow-color);
+    width: 100%;
+    gap: 0 3em;
+    @include breakPoints(mobile) {
+      flex-direction: column;
     }
-    img {
-      width: 20em;
-      margin-bottom: 2em;
-      @include breakPoints(mobile) {
-        width: 10em;
-      }
+    @include breakPoints(small) {
+      flex-direction: column;
+    }
+  }
+  img {
+    width: 50em;
+    transition: 1s;
+    @include breakPoints(mobile) {
+      width: 100%;
+    }
+    @include breakPoints(small) {
+      width: 80%;
+    }
+    @include breakPoints(medium) {
+      width: 30em;
+    }
+  }
+  article {
+    padding: 0 1em;
+    @include breakPoints(small) {
+      width: 80%;
+      margin: 0 auto;
     }
     p {
-      max-width: 90ch;
-      text-align: center;
-      font-size: 1.2em;
-      color: var(--dark-blue-color);
-      margin-bottom: 1.3em;
+      width: 80%;
+      font-size: 1.5em;
+      font-family: var(--main-font);
+      line-height: 1.5;
+      margin-bottom: 2em;
       @include breakPoints(mobile) {
-        font-size: 1em;
+        width: 100%;
+        font-size: 1.2em;
+      }
+      @include breakPoints(small) {
+        width: 100%;
+        font-size: 1.3em;
+      }
+      @include breakPoints(medium) {
+        width: 100%;
       }
     }
     a {
-      width: 12em;
-      background-color: var(--dark-blue-color);
-      color: var(--white-color);
-      text-align: center;
-      padding: 1.2em 1em;
-      border-radius: 10px;
-      text-transform: uppercase;
-      font-weight: 600;
-      @include breakPoints(mobile) {
+      button {
         width: max-content;
-        padding: 1em 0.5em;
-        font-size: 0.8em;
+        padding: 1em 1.5em;
+        background-color: var(--red-color);
+        color: var(--white-color);
+        font-family: subFont;
+        text-transform: capitalize;
+        font-size: 1.2em;
+        &:hover {
+          background-color: var(--dark-color);
+        }
+        @include breakPoints(mobile) {
+          width: 100%;
+        }
       }
     }
   }
