--- a/style/scss/_global settings.scss
+++ b/style/scss/_global settings.scss
@@ -7,20 +7,27 @@
 html {
   scroll-behavior: smooth;
   scrollbar-width: thin;
-  scrollbar-color: var(--light-blue-color) var(--white-color);
+  scrollbar-color: var(--red-color) var(--white-color);
 }
-body {
-  font-family: var(--main-font);
+// scroll bar ----------
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--red-color);
+}
+::-webkit-scrollbar-thumb:hover {
+  background: var(--light-color);
 }
 
-.container {
-  max-width: 80%;
-  margin: 0 auto;
-  @include breakPoints(mobile) {
-    max-width: 100%;
-    padding: 0 0.8em;
-  }
+body {
+  background-color: var(--white-color);
+  overflow-x: hidden;
 }
+
 li {
   list-style: none;
 }
@@ -29,17 +36,88 @@ a {
   text-decoration: none;
 }
 
+#google_translate_element {
+  position: fixed;
+  bottom: -4px;
+  left: 0;
+  z-index: 5;
+  @include breakPoints(mobile) {
+    width: 100%;
+  }
+  span {
+    display: none;
+  }
+  select {
+    background-color: var(--light-color);
+    color: var(--white-color);
+    border: none;
+    padding: 1em;
+    outline: none;
+    text-transform: uppercase;
+    font-family: subFont;
+    @include breakPoints(mobile) {
+      width: 100%;
+      padding: 0.3em;
+    }
+    option {
+      background-color: var(--white-color);
+      color: var(--dark-color);
+      font-family: var(--main-font);
+      // display: none;
+      &:nth-of-type(5) {
+        display: block;
+      }
+    }
+  }
+}
+
 .big-title {
-  font-size: 3em;
-  opacity: 0.8;
-  text-align: center;
+  font-family: var(--main-font);
   text-transform: uppercase;
-  font-family: var(--sub-font);
-  margin-bottom: 2em;
+  font-size: 4em;
+  color: var(--blue-color);
+  margin-bottom: 2rem;
   @include breakPoints(mobile) {
     font-size: 2.5em;
   }
   @include breakPoints(small) {
     font-size: 3.5em;
+  }
+}
+
+button {
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.loading-page {
+  width: 100%;
+  height: 100vh;
+  z-index: 50;
+  background-color: var(--dark-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  img {
+    width: 20em;
+    animation: moving2 0.5s infinite alternate;
+    @include breakPoints(mobile) {
+      width: 10em;
+    }
+    @include breakPoints(small) {
+      width: 15em;
+    }
+  }
+  @keyframes moving2 {
+    0% {
+      transform: translateY(-10px);
+    }
+    100% {
+      transform: translateY(10px);
+    }
   }
 }
