--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -1,154 +1,107 @@
 header {
   width: 100%;
-  background-color: var(--light-blue-color);
-  padding: 1em 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10%;
+  background-color: transparent;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 10;
-  .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    img {
-      width: 7em;
-    }
-    nav {
-      .listBtn,
-      .cancelBtn {
-        display: none;
-        position: relative;
-        width: 3em;
-        cursor: pointer;
-        @include breakPoints(mobile) {
-          display: block;
-        }
-        @include breakPoints(small) {
-          display: block;
-        }
-      }
-      .cancelBtn {
-        @include breakPoints(mobile) {
-          display: none;
-        }
-        @include breakPoints(small) {
-          display: none;
-        }
-      }
-      ul {
-        color: var(--white-color);
-        display: flex;
-        @include breakPoints(mobile) {
-          flex-direction: column;
-          align-items: center;
-          display: none;
-          position: absolute;
-          top: 10%;
-          left: 0;
-          width: 100%;
-          background-color: var(--dark-blue-color);
-          animation: moving 0.5s;
-          @keyframes moving {
-            0% {
-              opacity: 0;
-            }
-            100% {
-              opacity: 1;
-            }
-          }
-        }
-        @include breakPoints(mobile) {
-          top: 5.5em;
-        }
-        @include breakPoints(small) {
-          flex-direction: column;
-          align-items: center;
-          display: none;
-          position: absolute;
-          top: 5.5em;
-          left: 0;
-          width: 100%;
-          background-color: var(--dark-blue-color);
-          animation: moving 0.5s;
-          @keyframes moving {
-            0% {
-              opacity: 0;
-            }
-            100% {
-              opacity: 1;
-            }
-          }
-        }
-        li {
-          text-transform: uppercase;
-          padding: 0 1em;
-          cursor: pointer;
-          user-select: none;
-          &:hover {
-            background-color: var(--white-color);
-            color: var(--dark-blue-color);
-          }
-          @include breakPoints(mobile) {
-            padding: 1em;
-            &:hover {
-              background-color: var(--white-color);
-              color: var(--dark-blue-color);
-            }
-          }
-          @include breakPoints(small) {
-            padding: 1em;
-          }
-        }
-      }
-    }
+  transition: 0.5s;
+  @include breakPoints(mobile) {
+    padding: 0 1em;
+  }
+  #logo {
+    width: 7em;
+    padding: 0.5em 0;
+    opacity: 0;
+    transition: 0.5s;
+  }
+  img {
+    width: 3em;
+    cursor: pointer;
+  }
+  #cancelBtn {
+    display: none;
   }
 }
-
-.change-language {
+// ----------------- nav ---------------
+nav {
   width: 100%;
+  background-color: rgba(0, 0, 0, 0.555);
   position: fixed;
-  top: 5.5em;
-  z-index: 5;
-  left: 0;
-  background-color: var(--yellow-color);
-  color: var(--dark-blue-color);
-  .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    @include breakPoints(mobile) {
-      flex-direction: column-reverse;
+  right: 0;
+  top: 4.6em;
+  justify-content: flex-end;
+  height: calc(100vh - 4.5em);
+  z-index: 10;
+  display: none;
+  animation: moving 0.5s;
+  @keyframes moving {
+    0% {
+      opacity: 0;
     }
-    .phone-email {
-      display: flex;
-      align-items: center;
+    100% {
+      opacity: 1;
+    }
+  }
+  ul {
+    width: 25%;
+    background-color: var(--light-color);
+    padding: 1.5em 2em;
+    @include breakPoints(mobile) {
+      width: 70%;
+    }
+    @include breakPoints(small) {
+      width: 50%;
+    }
+    .nav-logo {
+      width: 10em;
+      margin-bottom: 2.5em;
       @include breakPoints(mobile) {
         display: none;
       }
-      a {
-        display: flex;
-        align-items: center;
-        margin: 0 0.5em;
-        color: black;
-        img {
-          width: 2em;
-          margin-right: 0.5em;
-        }
+    }
+    li {
+      padding: 0.5em 0;
+      font-family: var(--main-font);
+      color: var(--white-color);
+      font-size: 1.3em;
+      text-transform: uppercase;
+      cursor: pointer;
+      &:hover {
+        background-color: var(--white-color);
+        color: var(--dark-color);
       }
     }
-  }
-  #google_translate_element {
-    span {
-      display: none;
-    }
-    select {
-      font-family: var(--main-font);
-      color: var(--dark-blue-color);
-      background-color: var(--white-color);
-      outline: none;
-      border: none;
-      scrollbar-width: thin;
-      scrollbar-color: var(--yellow-color) var(--white-color);
+    .s-m {
+      margin-top: 4em;
+      display: flex;
+      width: 100%;
+      align-items: center;
+      justify-content: flex-start;
+      @include breakPoints(small) {
+        margin-top: 1em;
+      }
+      a {
+        &:hover {
+          transform: scale(0.9);
+        }
+        @include breakPoints(mobile) {
+          transform: none;
+        }
+        @include breakPoints(small) {
+          transform: none;
+        }
+        @include breakPoints(medium) {
+          transform: none;
+        }
+        img {
+          width: 3em;
+        }
+      }
     }
   }
 }
