--- a/style/scss/_section-3.scss
+++ b/style/scss/_section-3.scss
@@ -1,40 +1,66 @@
 .section-3 {
   width: 100%;
-  background-color: var(--dark-blue-color);
-  color: var(--white-color);
+  background-color: var(--dark-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 2em 0;
-  .container {
+  .services {
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 2em;
     align-items: center;
-    h1 {
-      margin-bottom: 1.5em;
-      color: var(--white-color);
-    }
-    .services {
-      display: grid;
-      width: 100%;
-      grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
-      gap: 3em 7em;
-      // @include breakPoints(small) {
-      //   grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
-      // }
-      .service {
-        border-radius: 10px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 3.5em 1em;
-        background-color: var(--light-blue-color);
-        img {
-          width: 7em;
-          margin-bottom: 1em;
-        }
-        h4 {
-          text-transform: uppercase;
-          text-align: center;
-        }
+    justify-content: center;
+    .service {
+      width: 30%;
+      display: flex;
+      margin: 1em;
+      padding: 2em 1em;
+      display: flex;
+      align-items: center;
+      border-radius: 10px;
+      transform: translateX(-80em);
+      transition: 1s;
+      @include breakPoints(mobile) {
+        width: 100%;
+      }
+      @include breakPoints(small) {
+        width: 40%;
+      }
+      font-family: var(--main-font);
+      &:nth-of-type(1),
+      &:nth-of-type(2) {
+        background-color: var(--white-color);
+        color: var(--blue-color);
+      }
+      &:nth-of-type(3),
+      &:nth-of-type(4) {
+        background-color: var(--light-color);
+        color: var(--blue-color);
+      }
+      &:nth-of-type(5),
+      &:nth-of-type(6) {
+        background-color: var(--blue-color);
+        color: var(--white-color);
+      }
+      &:nth-of-type(7),
+      &:nth-of-type(8) {
+        background-color: #00e6ff;
+      }
+      &:nth-of-type(9) {
+        background-color: #00ffd4;
+      }
+      img {
+        width: 5em;
+        padding: 0.5em;
+        border-radius: 50%;
+        margin-right: 1.5em;
+        background-color: #32166f;
+      }
+      h2 {
+        font-weight: 400;
       }
     }
   }
