--- a/style/scss/_section-5.scss
+++ b/style/scss/_section-5.scss
@@ -1,92 +1,59 @@
 .section-5 {
   width: 100%;
-  background-color: var(--white-color);
-  padding: 3em 0;
-  .container {
-    display: flex;
-    flex-direction: column;
+  background-color: var(--light-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3em 1em;
+  .big-title {
+    color: var(--dark-color);
+  }
+  .products {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
     gap: 2em;
-    h1 {
-      color: var(--dark-blue-color);
-    }
-    section {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(30em, 1fr));
-      gap: 2em;
-      @include breakPoints(mobile) {
-        grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
-      }
-      @include breakPoints(mobile-m) {
-        grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
-      }
-      @include breakPoints(small) {
-        grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
-      }
-      // @include breakPoints(large) {
-      //   grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
-      // }
-    }
-    form {
+    .product {
       width: 100%;
       display: flex;
       flex-direction: column;
-      background-color: gainsboro;
-      padding: 1em 0;
+      align-items: center;
+      justify-content: center;
+      background-color: var(--dark-color);
       border-radius: 10px;
-      input,
-      textarea {
-        outline: none;
-        border: none;
-        padding: 1em 1.5em;
-        text-transform: capitalize;
-        font-family: var(--main-font);
-        margin: 0 auto 1em;
-        border-radius: 20px;
-        background-color: rgb(255, 255, 255);
-        color: var(--dark-blue-color);
-        width: 80%;
-        font-size: 1em;
-        border-left: 5px solid var(--light-blue-color);
-        @include breakPoints(mobile) {
-          width: 90%;
+      padding: 5em 1em;
+      transform: rotateY(270deg);
+      transition: 1s;
+      @keyframes flipInX {
+        0% {
+          transform: rotateY(270deg);
+        }
+        100% {
+          transform: rotateY(0);
         }
       }
-      textarea {
-        resize: none;
-      }
-      button {
-        width: 80%;
-        padding: 1em 0.7em;
-        border: none;
-        background-color: var(--yellow-color);
-        color: var(--dark-blue-color);
-        border-radius: 10px;
-        text-transform: uppercase;
-        font-size: 1.2em;
-        font-family: var(--sub-font);
-        cursor: pointer;
-        margin: 0 auto;
-        @include breakPoints(mobile) {
-          width: 90%;
-        }
-        &:hover {
-          background-color: var(--dark-blue-color);
-          color: var(--white-color);
+      .container {
+        // padding: 0.5em;
+        background-color: var(--white-color);
+        width: 12em;
+        height: 12em;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 1em;
+        img {
+          width: 10em;
         }
       }
     }
-    iframe {
-      width: 100%;
-      border-radius: 10px;
-      min-height: 100%;
+    h1 {
+      font-family: var(--main-font);
+      color: var(--white-color);
+      font-size: 1.2em;
+      font-weight: 400;
+      text-align: center;
+      text-transform: uppercase;
     }
   }
-}
-
-input,
-button,
-textarea,
-iframe:scope {
-  border: none;
-  outline: none;
 }
