--- a/style/scss/_global settings.scss
+++ b/style/scss/_global settings.scss
@@ -26,9 +26,6 @@ html {
 body {
   background-color: var(--white-color);
   overflow-x: hidden;
-  @include breakPoints(mobile) {
-    margin-bottom: 2.5em;
-  }
 }
 
 li {
@@ -123,5 +120,14 @@ button {
     100% {
       transform: translateY(10px);
     }
+  }
+}
+.space {
+  display: none;
+  @include breakPoints(mobile) {
+    width: 100%;
+    height: 3em;
+    background-color: var(--dark-color);
+    display: block;
   }
 }
