--- a/style/scss/_section-6.scss
+++ b/style/scss/_section-6.scss
@@ -131,6 +131,9 @@
     textarea {
       resize: none;
     }
+    hr {
+      margin: 1em 0;
+    }
     select {
       padding: 1em;
       background-color: var(--light-color);
