--- a/style/scss/_global settings.scss
+++ b/style/scss/_global settings.scss
@@ -48,13 +48,15 @@ a {
     display: none;
   }
   select {
-    background-color: var(--light-color);
+    background-color: var(--blue-color);
     color: var(--white-color);
     border: none;
+    font-size: 1.5em;
     padding: 1em;
     outline: none;
     text-transform: uppercase;
     font-family: subFont;
+    box-shadow: 0 -1px 9px gray;
     @include breakPoints(mobile) {
       width: 100%;
       padding: 0.3em;
