--- a/style/scss/_section-6.scss
+++ b/style/scss/_section-6.scss
@@ -31,6 +31,7 @@
       transition: 1.5s;
       &:first-of-type {
         margin-bottom: 2em;
+        width: 0;
       }
       &:last-of-type {
         margin-top: 2em;
